mpegts: demux synchronous SMPTE 336M Key-Length-Value (KLV) metadata

Fixes ticket #2579.